--- a/source/frontend/src/block/FilterContent/FilterContent.scss
+++ b/source/frontend/src/block/FilterContent/FilterContent.scss
@@ -6,6 +6,7 @@
 
 	.filter-menu {
 		//padding-bottom: $sizeGrid * 2;
+		z-index: zindex($layout, content) + 1;
 	}
 
 	.filter-result {
@@ -13,6 +14,8 @@
 		font-size: 0;
 		width: calc(100% + #{$sizeGrid * 2});
 		margin-left: -$sizeGrid;
+		position: relative;
+		z-index: zindex($layout, content);
 	}
 
 	.block {
