--- a/source/frontend/src/component/SlideoutPanel/panel/PanelContactKernel/PanelContactKernel.scss
+++ b/source/frontend/src/component/SlideoutPanel/panel/PanelContactKernel/PanelContactKernel.scss
@@ -1,5 +1,5 @@
 :local {
-	.panel-contact {
+	.panel-contact-kernel {
 		position: relative;
 
 		.submit-button {
@@ -13,11 +13,6 @@
 		padding-bottom: $sizeGrid/2;
 		text-transform: uppercase;
 		font-weight: 800;
-	}
-
-	.phone-button {
-		@include position(0, 0, auto, auto);
-		position: absolute;
 	}
 
 	.fields {
