Add the menu slideout panel

--- a/source/frontend/src/component/layout/SiteHeader/SiteHeader.scss
+++ b/source/frontend/src/component/layout/SiteHeader/SiteHeader.scss
@@ -7,7 +7,7 @@
 		z-index: zindex($layout, header);
 		transition: background 0.2s $easeInOut;
 
-		&.is-scrolled {
+		&.solid-background {
 			background: white;
 			box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.08);
 		}
