--- a/source/frontend/src/component/button/ButtonQuaternary/ButtonQuaternary.scss
+++ b/source/frontend/src/component/button/ButtonQuaternary/ButtonQuaternary.scss
@@ -18,11 +18,11 @@
 
 		&.theme-light {
 			.label {
-				color: $colorWhite;
+				color: $colorSecondary;
 			}
 
 			.stripe {
-				background: $colorWhite;
+				background: $colorSecondary;
 			}
 		}
 	}
