--- a/source/frontend/src/block/DownloadFileA/DownloadFileA.scss
+++ b/source/frontend/src/block/DownloadFileA/DownloadFileA.scss
@@ -1,2 +1,38 @@
 :local {
+	.download-file-a {
+		position: relative;
+		width: 100%;
+		color: white;
+		margin-left: auto;
+		margin-right: auto;
+		max-width: $largeSiteFrame;
+
+		&:global {
+			&.is-windowed {
+				border-color: transparent;
+				border-left-width: $sizeGrid*4;
+				border-right-width: $sizeGrid*4;
+			}
+		}
+	}
+
+	.content {
+		background: $colorSecondary;
+		color: $colorWhite;
+		padding: $sizeGrid * 2;
+	}
+
+	.heading {
+		margin-bottom: $sizeGrid / 2;
+	}
+
+	.paragraph {
+	}
+
+	.bottom {
+		@include size(100%, auto);
+		margin-top: $sizeGrid * 3;
+		display: flex;
+		justify-content: space-between;
+	}
 }
