Update the documentation for the blocks

--- a/source/frontend/src/block/SmallImage/SmallImage.scss
+++ b/source/frontend/src/block/SmallImage/SmallImage.scss
@@ -12,6 +12,10 @@
 			text-align: left;
 		}
 
+		&.alignment-center {
+			text-align: center;
+		}
+
 		&.alignment-right {
 			text-align: right;
 		}
