--- a/source/frontend/src/component/button/ButtonQuaternary/ButtonQuaternary.scss
+++ b/source/frontend/src/component/button/ButtonQuaternary/ButtonQuaternary.scss
@@ -5,6 +5,7 @@
 		text-transform: uppercase;
 		padding-left: $sizeGridSecondary;
 		position: relative;
+		align-self: flex-start;
 
 		&.theme-dark {
 			.label {
