--- a/source/frontend/src/component/button/ButtonPrimary/ButtonPrimary.scss
+++ b/source/frontend/src/component/button/ButtonPrimary/ButtonPrimary.scss
@@ -38,7 +38,6 @@
 	// Themes
 	.theme-dark {
 		color: $colorPrimary;
-		background: $colorWhite;
 
 		.stripe {
 			background: $colorSecondary;
@@ -47,6 +46,25 @@
 		rect {
 			&.background-stroke {
 				stroke: rgba(0, 0, 0, 0.3);
+			}
+
+			&.hover-stroke {
+				stroke: $colorSecondary;
+			}
+		}
+	}
+
+	.theme-dark-solid {
+		color: $colorWhite;
+		background: $colorPrimary;
+
+		.stripe {
+			background: $colorSecondary;
+		}
+
+		rect {
+			&.background-stroke {
+				stroke: $colorPrimary;
 			}
 
 			&.hover-stroke {
@@ -69,6 +87,25 @@
 
 			&.hover-stroke {
 				stroke: $colorWhite;
+			}
+		}
+	}
+
+	.theme-light-solid {
+		color: $colorPrimary;
+		background: $colorWhite;
+
+		.stripe {
+			background: $colorSecondary;
+		}
+
+		rect {
+			&.background-stroke {
+				stroke: $colorWhite;
+			}
+
+			&.hover-stroke {
+				stroke: $colorSecondary;
 			}
 		}
 	}
