--- a/source/frontend/src/asset/style/screen.scss
+++ b/source/frontend/src/asset/style/screen.scss
@@ -71,10 +71,9 @@ figure {
 }
 
 .seng-state-indicator {
+	@include position(auto, auto, 0 ,0);
 	font-family: $fontOpenSans;
 	border: 0;
-	top: auto;
-	bottom: 0;
 	background: red;
 	color: white;
 	padding: 10px;
