--- a/source/frontend/src/block/TargetAudience/TargetAudience.scss
+++ b/source/frontend/src/block/TargetAudience/TargetAudience.scss
@@ -1,2 +1,55 @@
 :local {
+	.target-audience {
+		@include aspect-ratio(1440px, 720px);
+		color: white;
+	}
+
+	.abs-fill {
+		padding: $sizeGrid;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+	}
+
+	.header {
+		@include size(100%, auto);
+		text-align: center;
+		margin-bottom: $sizeGrid;
+	}
+
+	.draggable-container {
+		padding: 0;
+		//overflow: hidden;
+	}
+
+	.devices {
+		width: auto;
+		margin-bottom: $sizeGrid;
+		white-space: nowrap;
+		font-size: 0;
+		display: inline-block;
+		//margin-left: -$sizeGrid;
+	}
+
+	.device {
+		width: calc(100vw / 3);
+		display: inline-block;
+		text-align: center;
+		white-space: normal;
+		padding: 0 $sizeGrid;
+		vertical-align: top;
+	}
+
+	.device-image{
+		margin-bottom: $sizeGrid / 2;
+	}
+
+	.device-heading {
+		margin-bottom: $sizeGrid / 2;
+	}
+
+	.device-image {
+		@include size(100%, auto);
+		@include aspect-ratio(16px, 9px);
+	}
 }
