Medium size layout tweak

--- a/source/frontend/src/block/TargetAudience/TargetAudience.scss
+++ b/source/frontend/src/block/TargetAudience/TargetAudience.scss
@@ -53,6 +53,10 @@
 	}
 
 	@include respond-to(MEDIUM) {
+		.target-audience {
+			@include aspect-ratio(4px, 3px);
+		}
+
 		.header,
 		.devices,
 		.device-image,
