--- a/source/frontend/src/asset/style/util/extends.scss
+++ b/source/frontend/src/asset/style/util/extends.scss
@@ -2,4 +2,4 @@
 @import 'extend/reset-input';
 @import 'extend/reset-list';
 @import 'extend/unstyled-link';
-@import 'extend/unstyled-link';
+@import 'extend/heading';
