--- a/source/frontend/src/block/AudienceReach/AudienceReach.scss
+++ b/source/frontend/src/block/AudienceReach/AudienceReach.scss
@@ -71,10 +71,12 @@
 		}
 		.channels {
 			flex-direction: column;
+			align-items: center;
 		}
 
 		.channel {
 			width: 100%;
+			max-width: 375px;
 
 			&:not(:first-child) {
 				margin-left: 0;
