--- a/source/frontend/src/block/SuccessStoriesA/SuccessStoriesA.scss
+++ b/source/frontend/src/block/SuccessStoriesA/SuccessStoriesA.scss
@@ -1,2 +1,85 @@
 :local {
+	.success-stories-a {
+		@include size(100%, auto);
+		position: relative;
+		background: $colorLightGrey;
+		padding-top: $sizeGrid * 3;
+		padding-bottom: $sizeGrid * 5;
+
+		&:before {
+			@include triangle(left, bottom, $colorWhite, $sizeGrid * 5);
+			@include position(auto, auto, 0, 0);
+			position: absolute;
+			content: '';
+		}
+
+		.story-description {
+			padding-left: $sizeGrid * 2;
+		}
+	}
+
+	.overrule-overlap {
+		position: relative;
+		display: flex;
+		flex-direction: row;
+		align-items: flex-start;
+	}
+
+	.story-highlight {
+		@include size(35%, auto);
+		order: 1;
+		z-index: 1;
+	}
+
+	.story-description {
+		@include size(65%, auto);
+		order: 2;
+	}
+
+	.heading {
+		margin-bottom: $sizeGrid / 4;
+	}
+
+	.copy {
+		margin-bottom: $sizeGrid;
+	}
+
+	.button {
+		margin-bottom: 2px;
+	}
+
+	@include respond-to(SMALL) {
+		.overrule-overlap {
+			flex-direction: column;
+			text-align: center;
+			justify-content: center;
+		}
+
+		.heading {
+			margin-bottom: $sizeGrid * 1.5;
+		}
+
+		.copy {
+			margin-bottom: $sizeGrid;
+		}
+
+		.button {
+			margin-bottom: $sizeGrid;
+		}
+
+		.success-stories-a {
+			padding-top: mobile-size($sizeGrid * 2);
+			padding-bottom: mobile-size($sizeGrid * 2);
+
+			&:before {
+				display: none;
+			}
+
+			.story-highlight,
+			.story-description {
+				width: 100%;
+				padding: 0;
+			}
+		}
+	}
 }
