--- a/source/frontend/src/block/TargetAudience/TargetAudience.scss
+++ b/source/frontend/src/block/TargetAudience/TargetAudience.scss
@@ -78,4 +78,11 @@
 			padding: 0 $sizeGridMobile * 2;
 		}
 	}
+
+	@include respond-to(SMALL) {
+		.target-audience {
+			@include aspect-ratio(1px, 1.5px);
+		}
+
+	}
 }
