Add the desktop market map

--- a/source/frontend/src/asset/style/screen.scss
+++ b/source/frontend/src/asset/style/screen.scss
@@ -1,4 +1,5 @@
 @import '~normalize.css';
+@import '~mapbox-gl/dist/mapbox-gl.css';
 @import 'layout/block';
 @import 'layout/site-frame';
 @import 'type/font';
@@ -25,6 +26,7 @@
 @import 'asset/form/checkbox';
 @import 'asset/scroll-bar';
 @import 'asset/gradient-overlay';
+
 
 html,
 body {
